fix: harden JDBC persistence reliability
- validate persisted identifier lengths before JDBC buffering
- align external assembly line IDs to the 255-character persistence limit
- add global bounds for active runs and buffered station logs
- preserve capacity correctly across flush failures and retries
- make failed persistence finalization retryable without poisoning buffers
- strengthen concurrency, saturation and recovery tests